name: logbot
version: 0.1
license: MIT
author: Timo B. Hübel <t.h@gmx.info>
maintainer: Timo B. Hübel <t.h@gmx.info>
synopsis: XMPP, logging
description: Simple XMPP MUC bot for logging purposes.
category: Network
stability: Experimental
cabal-version: >= 1.6
build-type: Simple
homepage: http://github.com/tbh/logbot

executable logbot
  main-is: Main.hs
  ghc-options: -Wall
  hs-source-dirs: src/
  build-depends:  base >= 4 && < 5,
                  containers >= 0.3.0.0 && < 0.3.1,
                  network >= 2.2.1.0 && < 2.2.2,
                  time >= 1.1 && < 1.2,
                  XMPP >= 0.1.2 && < 0.2,
                  ConfigFile >= 1.0 && < 1.1,
                  mtl >= 1.1.0 && < 1.1.1
